[gd_scene load_steps=28 format=2]

[ext_resource path="res://textures/purple-button.png" type="Texture" id=1]
[ext_resource path="res://scripts/tile_object.gd" type="Script" id=2]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=3]
[ext_resource path="res://scripts/Area2D.gd" type="Script" id=4]
[ext_resource path="res://textures/New Piskel.png" type="Texture" id=5]
[ext_resource path="res://scripts/Sound.gd" type="Script" id=6]
[ext_resource path="res://double-pixel.tres" type="DynamicFont" id=7]
[ext_resource path="res://textures/left-start-filled.png" type="Texture" id=8]
[ext_resource path="res://textures/down-start-filled.png" type="Texture" id=9]
[ext_resource path="res://textures/orange-button.png" type="Texture" id=10]
[ext_resource path="res://textures/down-left.png" type="Texture" id=11]
[ext_resource path="res://textures/background_tile.png" type="Texture" id=12]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=13]
[ext_resource path="res://scripts/MovesText.gd" type="Script" id=14]
[ext_resource path="res://scripts/Scene1.gd" type="Script" id=15]
[ext_resource path="res://textures/hint.png" type="Texture" id=16]
[ext_resource path="res://textures/stone.png" type="Texture" id=18]
[ext_resource path="res://double-pixel-button.tres" type="DynamicFont" id=19]
[ext_resource path="res://scripts/button_effect.gd" type="Script" id=20]
[ext_resource path="res://textures/red-button.png" type="Texture" id=21]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="GDScript" id=4]
script/source = "extends Panel



# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	$TestText.text = str(get_tree().get_current_scene().get_name())



# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
	

"

[sub_resource type="GDScript" id=5]
script/source = "extends Sprite

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 63.886, 63.9349 )

[sub_resource type="Animation" id=7]
resource_name = "setup"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Level 1" type="Node2D"]
position = Vector2( 1.5874, 0.793701 )
script = ExtResource( 15 )

[node name="Background2" type="Node2D" parent="."]
visible = false
position = Vector2( 1042.37, 434 )

[node name="Sprite" type="Sprite" parent="Background2"]
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="Background2"]
position = Vector2( 0, -128 )
texture = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="Background2"]
position = Vector2( 128, -128 )
texture = ExtResource( 12 )

[node name="Sprite4" type="Sprite" parent="Background2"]
position = Vector2( 128, -3.05176e-05 )
texture = ExtResource( 12 )

[node name="Sprite5" type="Sprite" parent="Background2"]
position = Vector2( -128, 0 )
texture = ExtResource( 12 )

[node name="Sprite6" type="Sprite" parent="Background2"]
position = Vector2( -128, -128 )
texture = ExtResource( 12 )

[node name="Sprite10" type="Sprite" parent="Background2"]
position = Vector2( -256, -128 )
texture = ExtResource( 12 )

[node name="Sprite11" type="Sprite" parent="Background2"]
position = Vector2( -256, 0 )
texture = ExtResource( 12 )

[node name="Sprite12" type="Sprite" parent="Background2"]
position = Vector2( -256, 0 )
texture = ExtResource( 12 )

[node name="Sprite7" type="Sprite" parent="Background2"]
position = Vector2( -128, 128 )
texture = ExtResource( 12 )

[node name="Sprite13" type="Sprite" parent="Background2"]
position = Vector2( -256, 128 )
texture = ExtResource( 12 )

[node name="Sprite14" type="Sprite" parent="Background2"]
position = Vector2( -256, 256 )
texture = ExtResource( 12 )

[node name="Sprite15" type="Sprite" parent="Background2"]
position = Vector2( -128, 256 )
texture = ExtResource( 12 )

[node name="Sprite16" type="Sprite" parent="Background2"]
position = Vector2( 0, 256 )
texture = ExtResource( 12 )

[node name="Sprite17" type="Sprite" parent="Background2"]
position = Vector2( 128, 256 )
texture = ExtResource( 12 )

[node name="Sprite8" type="Sprite" parent="Background2"]
position = Vector2( 0, 128 )
texture = ExtResource( 12 )

[node name="Sprite9" type="Sprite" parent="Background2"]
position = Vector2( 128, 128 )
texture = ExtResource( 12 )

[node name="Timer" type="Timer" parent="."]

[node name="ScoreBoard" type="Sprite" parent="."]
position = Vector2( 221, 254.6 )
scale = Vector2( 3, 2 )
texture = ExtResource( 5 )

[node name="TimerPanel" type="Panel" parent="."]
margin_left = 186.0
margin_top = 254.6
margin_right = 226.0
margin_bottom = 294.6
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="TimerPanel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesPanel" type="Panel" parent="."]
margin_left = 171.0
margin_top = 213.0
margin_right = 211.0
margin_bottom = 253.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesText" type="Label" parent="MovesPanel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPanel" type="Panel" parent="."]
margin_left = 860.0
margin_top = 75.0
margin_right = 1060.0
margin_bottom = 175.0
custom_styles/panel = SubResource( 3 )
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestText" type="Label" parent="LevelPanel"]
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 7 )
text = "Level 1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Node2D" parent="."]
position = Vector2( 960, 500 )

[node name="Border 0,0" type="Sprite" parent="Border"]
position = Vector2( -192, -192 )
texture = ExtResource( 18 )

[node name="Border 1,0" type="Sprite" parent="Border"]
position = Vector2( -64, -192 )
texture = ExtResource( 18 )

[node name="Border 2,0" type="Sprite" parent="Border"]
position = Vector2( 68, -192 )
texture = ExtResource( 18 )

[node name="Border 3,0" type="Sprite" parent="Border"]
position = Vector2( 192, -192 )
texture = ExtResource( 18 )

[node name="Border 0,1" type="Sprite" parent="Border"]
position = Vector2( -192, -64 )
texture = ExtResource( 18 )

[node name="Border 3,1" type="Sprite" parent="Border"]
position = Vector2( 192, -64 )
texture = ExtResource( 18 )

[node name="Border 2,3" type="Sprite" parent="Border"]
position = Vector2( 192, 64 )
texture = ExtResource( 18 )

[node name="Border 3,3" type="Sprite" parent="Border"]
position = Vector2( 192, 192 )
texture = ExtResource( 18 )

[node name="Border 3,2" type="Sprite" parent="Border"]
position = Vector2( 64, 192 )
texture = ExtResource( 18 )

[node name="Border 1,3" type="Sprite" parent="Border"]
position = Vector2( -64, 192 )
texture = ExtResource( 18 )

[node name="Border 0,3" type="Sprite" parent="Border"]
position = Vector2( -192, 192 )
texture = ExtResource( 18 )

[node name="Border 0,2" type="Sprite" parent="Border"]
position = Vector2( -192, 64 )
texture = ExtResource( 18 )

[node name="Board" type="Area2D" parent="."]
position = Vector2( 896.413, 436.206 )
script = ExtResource( 4 )
level_nr = 1
hints = [ 1 ]

[node name="x1" type="Area2D" parent="Board"]
position = Vector2( 0, -1.52588e-05 )
script = ExtResource( 2 )
pipes = [ 1 ]
cost = 1
clickable = true

[node name="texture" type="Sprite" parent="Board/x1"]
texture = ExtResource( 8 )
script = ExtResource( 3 )

[node name="weight" type="Sprite" parent="Board/x1"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x1col" type="CollisionShape2D" parent="Board/x1"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x1"]
margin_left = -44.373
margin_top = -41.998
margin_right = 44.627
margin_bottom = 43.002
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x2" type="Area2D" parent="Board"]
position = Vector2( 128, -1.52588e-05 )
script = ExtResource( 2 )
pipes = [ 1 ]
cost = 1
order = 1
clickable = true

[node name="texture" type="Sprite" parent="Board/x2"]
texture = ExtResource( 11 )
script = ExtResource( 3 )

[node name="weight" type="Sprite" parent="Board/x2"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x5col" type="CollisionShape2D" parent="Board/x2"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x2"]
margin_left = -45.627
margin_top = -41.998
margin_right = 43.373
margin_bottom = 43.002
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x3" type="Area2D" parent="Board"]
position = Vector2( 0, 128 )
script = ExtResource( 2 )
order = 3

[node name="texture" type="Sprite" parent="Board/x3"]
script = ExtResource( 3 )

[node name="weight" type="Sprite" parent="Board/x3"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x6col" type="CollisionShape2D" parent="Board/x3"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x3"]
margin_left = -44.373
margin_top = -42.164
margin_right = 44.627
margin_bottom = 42.8357
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x4" type="Area2D" parent="Board"]
position = Vector2( 128, 128 )
script = ExtResource( 2 )
cost = 1
order = 4
clickable = true

[node name="texture" type="Sprite" parent="Board/x4"]
texture = ExtResource( 9 )
script = ExtResource( 3 )

[node name="weight" type="Sprite" parent="Board/x4"]
modulate = Color( 1, 1, 1, 0.52549 )
texture = ExtResource( 18 )
script = SubResource( 5 )

[node name="x8col" type="CollisionShape2D" parent="Board/x4"]
shape = SubResource( 6 )

[node name="clicks" type="Label" parent="Board/x4"]
margin_left = -45.627
margin_top = -42.164
margin_right = 43.373
margin_bottom = 42.8357
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintNode" type="Node2D" parent="Board"]
visible = false

[node name="Position2D" type="Position2D" parent="Board/HintNode"]
position = Vector2( -30, 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Board/HintNode/Position2D"]
anims/setup = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Board/HintNode/Position2D"]
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 16 )

[node name="Submit" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 870.0
margin_right = 1012.0
margin_bottom = 948.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 10 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Submit"]
margin_left = 59.9999
margin_top = 19.5146
margin_right = 152.0
margin_bottom = 58.5146
custom_fonts/font = ExtResource( 19 )
text = "SUBMIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hints" type="TextureButton" parent="."]
margin_left = 1430.41
margin_top = 15.2063
margin_right = 1642.41
margin_bottom = 93.2063
texture_normal = ExtResource( 21 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Hints"]
margin_left = 48.9592
margin_top = 20.5789
margin_right = 123.959
margin_bottom = 59.5789
custom_fonts/font = ExtResource( 19 )
text = "HINTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="TextureButton" parent="."]
margin_left = 1686.41
margin_top = 15.2063
margin_right = 1898.41
margin_bottom = 95.2063
texture_normal = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnOff" type="RichTextLabel" parent="Sound"]
margin_left = 40.0
margin_top = 21.0
margin_right = 168.0
margin_bottom = 61.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 19 )
bbcode_enabled = true
bbcode_text = "[center] Music [/center]"
text = " Music "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="TimerPanel/Timer" method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="Board/x1" to="Board/x1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x1" to="Board/x1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Board/x2" to="Board/x2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x2" to="Board/x2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Board/x3" to="Board/x3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x3" to="Board/x3" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Board/x4" to="Board/x4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Board/x4" to="Board/x4" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Submit" to="Submit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Submit" to="Submit" method="_on_mouse_exited"]
[connection signal="pressed" from="Submit" to="Board" method="_submit"]
[connection signal="mouse_entered" from="Hints" to="Hints" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hints" to="Hints" method="_on_mouse_exited"]
[connection signal="pressed" from="Hints" to="Board" method="_on_Hints_pressed"]
[connection signal="mouse_entered" from="Sound" to="Sound" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Sound" to="Sound" method="_on_mouse_exited"]
[connection signal="pressed" from="Sound" to="Sound" method="_on_Sound_pressed"]
